Make sure to tear down the XBL binding for nodes which forced one even though not in the document.  Bug 389636, r+sr+a=sicking